docs: add documentation for create opening handler
